--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
      
     </main>
     <footer>
-        <a href="https://github.com/urivargas" target="_blank"><img src="/img/logo-github.png" alt="logo-github" class="logo-github"></a>
-        <a href="https://www.linkedin.com/in/uriel-vargas-4b397223b/" target="_blank"><img src="/img/logo-linkedin.png" alt="logo-linkedin" class="logo-linkedin"></a>
-        <a href="mailto:uriel.vargas.dev@gmail.com" target="_blank"><img src="/img/logo-mail.png" alt="logo-mail" class="logo-mail"></a>
+        <a href="https://github.com/urivargas" target="_blank"><img src="img/logo-github.png" alt="logo-github" class="logo-github"></a>
+        <a href="https://www.linkedin.com/in/uriel-vargas-4b397223b/" target="_blank"><img src="img/logo-linkedin.png" alt="logo-linkedin" class="logo-linkedin"></a>
+        <a href="mailto:uriel.vargas.dev@gmail.com" target="_blank"><img src="img/logo-mail.png" alt="logo-mail" class="logo-mail"></a>
         
         <a href="https://twitter.com/Urivargas" target="_blank"><p>&copy;Uriel Vargas</p></a>
     </footer>
